--- a/src/main/webapp/WEB-INF/views/sign-in-with-errors.html
+++ b/src/main/webapp/WEB-INF/views/sign-in-with-errors.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Weather Viewer – Sign In</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../../resources/static/css/style.css">
+    <link rel="stylesheet" href="Weather/src/main/resources/static/css/style.css">
 </head>
 <body>
 
@@ -33,7 +33,7 @@
 
                     <div class="input-group has-validation">
                         <input type="text" class="form-control is-invalid" id="username" name="username" required value=""/>
-                        <div class="invalid-feedback">
+                        <div th:if="${err}" class="invalid-feedback">
                             Invalid email.
                         </div>
                     </div>
