--- a/src/main/webapp/WEB-INF/views/sign-in.html
+++ b/src/main/webapp/WEB-INF/views/sign-in.html
@@ -19,7 +19,7 @@
 
     <div class="row justify-content-center">
         <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-            <form action="#" class="mt-4">
+            <form th:action="@{/sign-in}" method="post" class="mt-4">
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
                     <input type="text" class="form-control" id="username" name="username" required value=""/>
@@ -32,7 +32,7 @@
                 <input type="hidden" name="redirect_to" value="http://localhost/"/>
 
                 <button type="submit" class="btn btn-primary w-100 mt-3">Sign In</button>
-                <p class="mt-2 text-center">Don't have an account? <a href="#">Sign up here</a></p>
+                <p class="mt-2 text-center">Don't have an account? <a href="sign-up">Sign up here</a></p>
             </form>
         </div>
     </div>
