--- a/src/main/webapp/WEB-INF/views/sign-in.html
+++ b/src/main/webapp/WEB-INF/views/sign-in.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Weather Viewer – Sign In</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../../resources/static/css/style.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
 
@@ -19,19 +19,28 @@
 
     <div class="row justify-content-center">
         <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-            <form th:action="@{/sign-in}" method="post" class="mt-4">
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="username" name="username" required value=""/>
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" required value=""/>
+            <form th:action="@{/sign-in}" method="post" th:object="${signInDto}">
+
+                <div th:if="${#fields.hasGlobalErrors()}" class="alert alert-danger">
+                    <p th:each="err : ${#fields.globalErrors()}" th:text="${err}"></p>
                 </div>
 
-                <input type="hidden" name="redirect_to" value="http://localhost/"/>
+                <div class="mb-3">
+                    <label>Username</label>
+                    <input type="text" th:field="*{username}" class="form-control"
+                           th:classappend="${#fields.hasErrors('username')} ? 'is-invalid' : ''">
+                    <div class="invalid-feedback" th:errors="*{username}"></div>
+                </div>
 
-                <button type="submit" class="btn btn-primary w-100 mt-3">Sign In</button>
+                <div class="mb-3">
+                    <label>Password</label>
+                    <input type="password" th:field="*{password}" class="form-control"
+                           th:classappend="${#fields.hasErrors('password')} ? 'is-invalid' : ''">
+                    <div class="invalid-feedback" th:errors="*{password}"></div>
+                </div>
+
+                <div class="d-grid gap-2"> <button type="submit" class="btn btn-primary">Sign In</button>
+                </div>
                 <p class="mt-2 text-center">Don't have an account? <a href="sign-up">Sign up here</a></p>
             </form>
         </div>
